<resources>
    <string name="app_name">LokasiGPS8</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="namanegara">Nama Negara</string>
    <string name="wilayah">Wilayah</string>
    <string name="Alamat">Alamat</string>
    <string name="getlocbutton">Dapatkan Lokasi</string>
    <string name="tittle">Lokasi saat ini</string>
</resources>